test/tests/operators/match/error_non_constant_range.txt
error: match patterns must be constant expressions
 --> tests/operators/match/error_non_constant_range.tql:7:6
  |
7 |   1..upper => {
  |      ^^^^^ 
  |
  = hint: use a literal, a constant expression, or `_`
